Added copyright info at bottom

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,11 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+          <p style="font-size:14px">
+          &copy; {{ site.time | date: '%Y' }} Jesse Steinweg-Woods -
+          Built with <a href="https://github.com/barryclark/jekyll-now">Jekyll Now</a> 
+          for <a href="http://jekyllrb.com">Jekyll</a>
+          </p>
         </footer>
       </div>
     </div>
